--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,7 +1,7 @@
 global:
   scrape_interval: 5s
   external_labels:
-    monitor: 'jenkins-monitor'
+    monitor: 'disk-monitor'
 
 rule_files:
   - 'alert.rules'
@@ -9,24 +9,19 @@ rule_files:
 scrape_configs:
   - job_name: 'prometheus' 
     static_configs: 
-      - targets: ['10.230.247.14:9090'] ## IP Address of the localhost
+      - targets: ['10.230.243.253:9090']
 
   - job_name: 'node-exporter' 
     static_configs: 
-      - targets: ['10.230.247.14:9100']
+      - targets: ['10.230.243.253:9100']
 
   - job_name: 'cadvisor'
     static_configs:
-      - targets: ['10.230.247.14:8080']
-
-#  - job_name: 'jenkins'
-#    metrics_path: /prometheus
-#    static_configs:
-#      - targets: ['10.230.242.116:8080']
+      - targets: ['10.230.243.253:8080']
 
 alerting:
   alertmanagers:
   - scheme: http
     static_configs:
     - targets:
-      - "10.230.247.14:9093"
+      - "10.230.243.253:9093"
