Removed old grafana backup & added jenkins.
Signed-off-by: Nitish Singh <nitish.singh@seagate.com>

--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -4,6 +4,7 @@ global:
     monitor: 'disk-monitor'
 
 rule_files:
+# All mountpoints in alert.rules have been manually mounted onto the node.
   - 'alert.rules'
 
 scrape_configs:
